# localstack-ui

./: .gitignore  CLAUDE.md  README.md  compose.yaml  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
backlog/: config.yml
backlog/tasks/: task-001 - Set-up-project-structure-and-dependencies.md  task-002 - Create-Docker-infrastructure.md  task-003 - Implement-base-Starlette-application.md  task-004 - Add-LocalStack-connection-layer.md  task-005 - Implement-S3-bucket-management.md  task-006 - Implement-S3-file-operations.md  task-007 - Implement-Lambda-viewer.md  task-008 - Implement-Step-Functions-viewer.md  task-009 - Create-LocalStack-initialization.md  task-010 - Create-Playwright-E2E-tests.md  task-011 - Add-UI-polish-and-accessibility.md
docker/app/: Dockerfile
docker/localstack/: Dockerfile
docker/localstack/init/: 01-setup-resources.sh
docker/nginx/: Dockerfile  generate-certs.sh  nginx.conf
docker/playwright/: Dockerfile
envs/: localstack-ui.env  localstack.env
src/localstack_ui/: aws_client.py  main.py  settings.py
src/localstack_ui/routes/: lambda_routes.py  s3.py  stepfunctions_routes.py
src/localstack_ui/services/: lambda_service.py  s3.py  (+1 more)
static/: style.css
templates/: base.html  index.html
templates/lambda/: function_detail.html  functions.html
templates/s3/: bucket_contents.html  buckets.html  create_bucket.html  delete_bucket.html  delete_file.html  upload_file.html
templates/stepfunctions/: state_machine_detail.html  state_machines.html
tests/: compose.yaml
tests/e2e/: test_app.py
